# funlang2

./: .clang-format  .dir-locals.el  .gitignore  .projectile  CMakeLists.txt  ast.edn  build_ast.cljs  langspec.txt
src/cpp/: alloc_debug.cpp  lang_datastructs.cpp  lexer.cpp  main.cpp  mystr.cpp  parser.cpp  util.cpp
src/inc/: alloc_debug.hpp  allocators.hpp  lang_datastructs.hpp  lexer.hpp  mystr.hpp  parser.hpp  ratio.hpp  smrt_ptrs.hpp  std_allocs.hpp  string_arena.hpp  token.hpp  util.hpp
